--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^11.5.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.32",
