--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.66.0",
     "sass": "^1.87.0",
     "zustand": "^5.0.3"
   },
